syntax = "proto3";


message SubscribeReq{
	int32 subReqID = 1;
	string userName = 2;
	string productName = 3;
	repeated string address = 4;
}