syntax = "proto3";

message SubscribeResp{
	int32 subReqId = 1;
	int32 respCode = 2;
	string desc = 3;
}